--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stripe-nextjs",
+  "name": "stripe-nextjs-demo",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -20,11 +20,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.543.0",
-    "next": "14.2.4",
+    "next": "^14.2.25",
     "next-themes": "^0.3.0",
     "prisma": "^5.16.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
@@ -34,7 +34,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "14.2.25",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
